# freetype2

./: CMakeLists.txt
cmake/: FreetypeD3Config.cmake.in
